# patient-ly-pragyan-hackathon-2026

./: .gitignore  CLAUDE.md  README.md  presentation.html  triage_agent.py  triage_agent_api.py
abdm-local-dev-kit/: .env.example  .gitignore  DOWNLOAD_INSTRUCTIONS.md  QUICK_START.md  README.md  docker-compose.yml
abdm-local-dev-kit/api-schemas/: dhp-core.yaml  fhir-mapper.yaml  gateway.yaml  hip-v3.yaml  hip.yaml  hiu.yaml  wrapper-v1.yaml  wrapper-v3.yaml  wrapper.yaml
abdm-local-dev-kit/docs/: API_REFERENCE.md  DOWNLOAD_INDEX.md  FHIR_CROSS_REFERENCE.md  GOOGLE_CLOUD_FHIR.md  RESEARCH_SUMMARY.md  RESOURCES_INDEX.md  VENDOR_NEUTRAL_GUIDE.md
abdm-local-dev-kit/fhir-samples/: README.md
abdm-local-dev-kit/scripts/: mongo-init.js  reset_data.sh  start.sh  validate_setup.sh
abdm-local-dev-kit/sdk/python/: .gitignore  .pypirc.template  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
abdm-local-dev-kit/sdk/python/abdm_client/: __init__.py  client.py  consent.py  discovery.py  exceptions.py  health_information.py  hip_callbacks.py  linking.py
abdm-local-dev-kit/sdk/python/examples/: 01_patient_discovery.py  02_care_context_linking.py  03_full_consent_flow.py  04_hip_callbacks.py
abdm-local-dev-kit/tests/: README_TESTING.md  comprehensive_smoke_test.py  requirements.txt  test_hip_schema_validation.py  test_schema_compliance.py  test_schema_compliance_auto.py  test_schema_validation.py  test_sdk_hip_callbacks.py
backend/: requirements.txt
backend/tests/: conftest.py  test_ambulance_adapter.py  test_bundler.py  test_pipeline.py  test_wearable_adapter.py
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  requirements.txt  vercel.json
frontend/api/: index.py
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/ingest/: config.py
frontend/lib/: mock-data.ts  patients-data.json  types.ts  use-triage.ts  voice-api.ts
frontend/public/: manifest.json
frontend/scripts/: generate-icons.mjs
frontend/voice/: config.py  requirements.txt
ingestion/: README.md  SYNTHEA_DATA.md  schema.md
ingestion/patiently/: __init__.py
ingestion/tests/: conftest.py  test_ambulance_adapter.py  test_bundler.py  test_ehr_adapter.py  test_handwritten_adapter.py  test_patient_linker.py  test_pipeline.py  test_realtime_vitals_adapter.py  test_scans_labs_adapter.py  test_synthea_adapter.py  test_synthea_generator.py  test_wearable_adapter.py
mcp_triage_server/: README.md  __init__.py  config.py  models.py  pyproject.toml  server.py
mcp_triage_server/data/: __init__.py  extractor.py  loader.py
mcp_triage_server/tools/: __init__.py  history.py  safety.py  search.py  snapshot.py
models/: ALTERNATIVE_LABELING_STRATEGIES.md  README.md  README_V2_PIPELINE.md  snomed_triage_mapping.json
models/baseline/: lightgbm_results_v2.json  lightgbm_v2.pkl  logistic_regression_results_v2.json  logistic_regression_v2.pkl  model_comparison_v2.json  random_forest_results_v2.json  random_forest_v2.pkl  train_clean_models.py  xgboost_results_v2.json  xgboost_v2.pkl
models/data/: X_test.parquet  X_train.parquet  X_val.parquet  extracted_features_v2.csv  extracted_features_v2.parquet  feature_engineering_v2.py  label_generator_v2.py  labeled_data_v2.parquet  preprocessor_v2.py  y_esi_test.parquet  y_esi_train.parquet  y_esi_val.parquet  y_risk_test.parquet  y_risk_train.parquet  y_risk_val.parquet
ui-experiments/: README.md
ui-experiments/prototypes/: CONCEPT_A_COMMAND_CENTER.md  (+4 more)
voice/: __init__.py  adapter.py  requirements.txt
(+829 files in other folders)
