[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-triage-server"
version = "0.1.0"
description = "MCP server for patient triaging with ABDM FHIR data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
mcp-triage-server = "mcp_triage_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["."]
