[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abdm-client"
version = "1.0.0"
description = "Official Python client library for ABDM (Ayushman Bharat Digital Mission) health data exchange"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "ABDM Dev Kit Team", email = "dev@abdm.gov.in"}
]
maintainers = [
    {name = "ABDM Dev Kit Team", email = "dev@abdm.gov.in"}
]
keywords = [
    "abdm",
    "healthcare",
    "health-data-exchange",
    "india",
    "fhir",
    "consent",
    "abha"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Operating System :: OS Independent",
    "Typing :: Typed"
]
dependencies = [
    "httpx>=0.26.0",
    "pyyaml>=6.0.1",
    "openapi-spec-validator>=0.7.0",
    "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/ABDM/abdm-client-python"
Documentation = "https://github.com/ABDM/abdm-client-python/docs"
Repository = "https://github.com/ABDM/abdm-client-python"
Issues = "https://github.com/ABDM/abdm-client-python/issues"
Changelog = "https://github.com/ABDM/abdm-client-python/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["abdm_client"]

[tool.setuptools.package-data]
abdm_client = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
